frontend/styles/login.css
body main{
  /* overflow:hidden; */
}

/*
#vanta-canvas {
  width: 100%;
  height: 100vh;
  z-index: 0;
  position: fixed;
}
*/

.kcum-main {
  z-index: 100; 
  position: relative;
	/* height: 50vh; */
	/* width: 50vh; */
  max-width: 100%;
  max-height: 100vh;
  min-height: 100%;
  font-weight: 100;
}

#login-signup { 
    border: 2.5px solid var(--accent-color);                                              
    padding: 10px;                                                                        
    margin: 5px;                                                                          
	margin-top: 0px;
    background-color: var(--background-color);                                            
    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.34),0 17px 50px 0 rgba(0,0,0,0.29);            
    font-family: var(--main-font);                                                
	display: flex;
	align-items: center;
	justify-content: center; 
}                                                                                         


.selected {
	background-color: var(--button-hglt-color);
	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.9);
	color: var(--font-accent-color);
}

#option-buttons{
	display: flex;
	align-items: center;
	justify-content: center;
}

#option-button-login, #option-button-signup {
	margin: 0px;
	padding: 0px;
	border-bottom: 0px;
	height: 5vh;
}

#signup-form {
	display: flex;
	flex-direction: column;
	flex-wrap: wrap;
}
/*
#option-button-login{ 
	background-color: var(--button-color);
}

#option-button-signup {
	background-color: var(--button-color);
}
*/

.forgot{
	text-align: right;
	color: blue;
}

.forgot > a {
	color: blue;
	background-color: red;
	font-size: 100px;
}

/*
input[type:text] {
	box-sizing: border-box;
	margin-top: 0;
	padding-top: 0;

}

input[type:text]:focus {
	border: 3px solid var(--accent-color-two);
	background-color: black;

}

button {                                                                                  
    border: 2px solid var(--accent-color);                                                
    text-align: center;                                                                   
    background-color: var(--button-color);                                                
    padding: 5px;                                                                         
    margin: 10px;                                                                         
    height: 5vh;                                                                         
    width: 12vw;                                                                          
    font-family: 'Inter', sans-serif;                                                     
    font-size: var(--font-size);                                                          
}                                                                                         
*/

.button-bundle {
	display: grid;
	width: 40vh;
	/* height: 15vh; */
}
/*

#delete_button {                                                                          
    background-color: var(--delete-button-color);                                         
}   

#delete_button:hover {                                                                          
    background-color: var(--delete-button-hglt-color);                                         
    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.09);
	transition-duration: 0.6s;
	color: white;                                                                             
}

*/

